--- a/services/web/src/components/filter/components/filterModal/FilterModal.css
+++ b/services/web/src/components/filter/components/filterModal/FilterModal.css
@@ -1,10 +1,11 @@
-.filters-modal {
+.filters_modal {
   position: relative;
   overflow: hidden;
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
+  background-color: var(--color-beige);
 }
 
 .screen {
