--- a/services/web/src/shared/ui/dataPicker/DatePicker.css
+++ b/services/web/src/shared/ui/dataPicker/DatePicker.css
@@ -10,77 +10,63 @@
 }
 
 .calendar__month {
-  font-family: Museo Sans Cyrl;
   font-weight: 400;
   font-size: 20px;
   line-height: 100%;
   text-align: center;
-  color: #382f31;
-  margin-bottom: 10px;
+  vertical-align: middle;
+  color: var(--color-black);
 }
 
 .calendar__header {
-  height: 24px;
-  font-family: Inter;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 27px;
   font-weight: 400;
   font-size: 11px;
   line-height: 100%;
   text-align: center;
   vertical-align: middle;
-  color: #b3b3b3;
+  color: #b69989;
 }
 
-.calendar__week_number {
+.calendar__header._week_end {
+  color: var(--color-orange);
+}
+
+/* .calendar__week_number {
   width: 24px;
   height: 24px;
   border-radius: 4px;
   background-color: #382f31;
-  font-family: Museo Sans Cyrl;
   font-weight: 400;
   font-size: 11px;
   line-height: 100%;
   text-align: center;
   vertical-align: middle;
   color: #ff84a5;
-}
+} */
 
 .calendar__day {
-  width: 27px;
-  height: 27px;
-  font-family: Museo Sans Cyrl;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 28px;
+  height: 28px;
   font-weight: 400;
   font-size: 16px;
-  line-height: 100%;
   text-align: center;
   vertical-align: middle;
-  color: #b3b3b3;
-}
-
-.calendar__day._disabled:hover {
-  background-color: #f5f5f5;
-  cursor: not-allowed;
-}
-
-.calendar__day._active {
-  background-color: #ffe0e5;
-  border-radius: 100%;
-  color: #382f31;
+  color: #b69989;
 }
 
 .calendar__day._week_end {
-  color: #17a1fa;
+  color: var(--color-orange);
 }
 
-.calendar__day._week_end._another_month {
-  color: #1270b0;
-}
-
-.calendar__day._another_month {
-  color: #616161;
-}
-
-.calendar__day._disabled {
-  color: #ccc !important;
-  background-color: #f5f5f5;
-  pointer-events: none;
+.calendar__day._active {
+  background-color: var(--color-orange);
+  border-radius: 4px;
+  color: var(--color-white);
 }
