--- a/services/web/src/shared/ui/button/Button.css
+++ b/services/web/src/shared/ui/button/Button.css
@@ -14,6 +14,11 @@
   color: var(--color-white);
   padding: 4px 10px;
   cursor: pointer;
+  
+}
+
+.button:disabled{
+  opacity: 0.6;
 }
 
 .button._orange {
