--- a/services/web/src/components/editProfileForm/EditProfileForm.css
+++ b/services/web/src/components/editProfileForm/EditProfileForm.css
@@ -35,3 +35,26 @@
 .edit_form_btn {
   margin-top: auto;
 }
+.social-input-wrapper {
+  position: relative;
+}
+
+.social-input-wrapper ._social_close_btn {
+  position: absolute;
+  right: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: inherit;
+  box-shadow: none;
+  width: 10px;
+  height: 10px;
+  padding: 0;
+}
+
+@media (max-width: 450px) {
+  .social_add_btn {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+  }
+}
