--- a/services/web/src/shared/ui/input/Input.css
+++ b/services/web/src/shared/ui/input/Input.css
@@ -10,6 +10,7 @@
   background-color: var(--color-white);
   color: var(--color-black);
   padding: 16px 11px;
+  padding-right: 32px;
   transition: all 0.2s ease-in-out;
 }
 
